tests/paczka1/fuzzy1/80778582.err
Error in line 3: CqvXZ7 A615 4,4
Error in line 5: CqvXZ7 A183 91,9
Error in line 11: 449hZlrBBiM A263 77,4
Error in line 30: nxiABBc7 A183 59,2
Error in line 23: 3HmWi A183 32,4
Error in line 32: 3HmWi S636 48,7
Error in line 31: nxiABBc7 A263 8,5
